# AI-Commerce

./: .gitignore  docker-compose.yml  main-phase-prompt.md
ai-service/: .env.example  .gitignore  Dockerfile  init-ai.sh  pyproject.toml  requirements.txt
ai-service/app/: __init__.py  epics.md  main.py
ai-service/app/api/ai/: __init__.py  dependencies.py  router.py  schemas.py
ai-service/app/api/auth/: dependencies.py  router.py  schemas.py
ai-service/app/api/chat/: router.py
ai-service/app/api/commerce/: __init__.py  dependencies.py  router.py  schemas.py
ai-service/app/api/integration/: dependencies.py  router.py  schemas.py
ai-service/app/api/knowledge/: __init__.py  dependencies.py  generation_dependencies.py  generation_router.py  generation_schemas.py  job_router.py  job_schemas.py  retrieval_dependencies.py  retrieval_router.py  retrieval_schemas.py  router.py  (+3 more)
ai-service/app/core/: ai_exceptions.py  ai_settings.py  auth_settings.py  celery_app.py  config.py  dependencies.py  exceptions.py  knowledge_settings.py  model_registry.py  mongo_settings.py  openai_settings.py  qdrant_settings.py  redis_settings.py  security.py
ai-service/app/db/: mongodb.py
ai-service/app/middleware/: audit.py  auth.py  logging.py  rate_limit.py
ai-service/app/utils/: ai_error_handler.py  logger.py  token_utils.py
ai-service/docs/: API_REFERENCE.md  ARCHITECTURE.md  KNOWLEDGE_SYNC.md  PLAYGROUND.md  README.md  TENANT_ISOLATION.md
ai-service/scripts/: e2e_integration_test.py  migrate_atlas.py  rag_playground.py  sample_questions.py
ai-service/tests/: conftest.py
(+568 files in other folders)
