[project]
name = "ai-commerce-service"
version = "1.0.0"
description = "AI Commerce Platform - Multi-provider AI orchestration service"
requires-python = ">=3.12"
authors = [
    {name = "AI Commerce Team"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-core>=2.0.0",
    "openai>=1.50.0",
    "anthropic>=0.45.0",
    "google-genai>=1.0.0",
    "mistralai>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
    "tiktoken>=0.7.0",
    "redis>=5.0.0",
    "motor>=3.0.0",
    "beanie>=1.20.0",
    "celery>=5.4.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.10.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
